@@ -8,6 +8,7 @@ import javassist.util.proxy.ProxyFactory;
 import javassist.util.proxy.MethodFilter;
 import javassist.util.proxy.MethodHandler;
 import javassist.util.proxy.ProxyObject;
+import javassist.util.proxy.Proxy;
 import junit.framework.Assert;
 import junit.framework.TestCase;
 import java.io.*;
@@ -28,7 +29,7 @@ public class ProxyTester extends TestCase {
                 Object[] args) throws Exception {
             System.out.println("intercept: " + m + ", proceed: " + proceed);
             System.out.println("     modifier: "
-            				   + Modifier.toString(proceed.getModifiers()));
+                               + Modifier.toString(proceed.getModifiers()));
             counter++;
             return proceed.invoke(self, args);
         }
@@ -44,7 +45,7 @@ public class ProxyTester extends TestCase {
                 return proceed.invoke(self, args);
             else
                 if (m.getReturnType() == int.class)
-                    return new Integer(3);
+                    return Integer.valueOf(3);
                 else
                     return "OK";
         }
@@ -60,11 +61,12 @@ public class ProxyTester extends TestCase {
         ProxyFactory f = new ProxyFactory();
         f.setSuperclass(Target.class);
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         f.writeDirectory = ".";
         Class c = f.createClass();
-        Target obj = (Target)c.newInstance();
+        Target obj = (Target)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor);
         obj.m();
         assertEquals(true, obj.m(true));
         assertEquals((byte)1, obj.m1((byte)1));
@@ -87,10 +89,11 @@ public class ProxyTester extends TestCase {
         ProxyFactory f = new ProxyFactory();
         f.setSuperclass(Target1.class);
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         Class c = f.createClass();
-        Target1 obj = (Target1)c.newInstance();
+        Target1 obj = (Target1)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor);
         assertEquals(null, obj.m(null));
         assertEquals(1, interceptor.counter);
     }
@@ -98,10 +101,11 @@ public class ProxyTester extends TestCase {
     public void testObject() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         Class c = f.createClass();
-        Object obj = (Object)c.newInstance();
+        Object obj = (Object)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor);
         System.out.println(obj.toString());
         assertEquals(2, interceptor.counter);
     }
@@ -110,10 +114,11 @@ public class ProxyTester extends TestCase {
         ProxyFactory f = new ProxyFactory();
         f.writeDirectory = ".";
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         Class c = f.createClass();
-        Object obj = (Object)c.newInstance();
+        Object obj = (Object)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor);
         System.out.println("setter1: " + obj.toString());
         ((ProxyObject)obj).setHandler(new MethodHandler() {
             public Object invoke(Object self, Method m, Method proceed,
@@ -128,7 +133,7 @@ public class ProxyTester extends TestCase {
     public void testString() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         f.setSuperclass(String.class);
         try {
@@ -143,7 +148,7 @@ public class ProxyTester extends TestCase {
     public void testConstructor() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         f.setSuperclass(Target2.class);
         Class c = f.createClass();
@@ -156,7 +161,8 @@ public class ProxyTester extends TestCase {
         assertEquals(0, m1.getExceptionTypes().length);
         assertEquals("java.io.IOException", m2.getExceptionTypes()[0].getName());
 
-        Target2 t2 = (Target2)con1.newInstance(new Object[] { new Integer(1) });
+        Target2 t2 = (Target2)con1.newInstance(new Object[] { Integer.valueOf(1) });
+        ((Proxy)t2).setHandler(interceptor);
         System.out.println(t2.toString());
         assertEquals(2, interceptor.counter);
 
@@ -169,11 +175,12 @@ public class ProxyTester extends TestCase {
     public void testInterface() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor2 interceptor2 = new Interceptor2();
-        f.setHandler(interceptor2);
+        // f.setHandler(interceptor2);
         f.setFilter(finalizeRemover);
         f.setInterfaces(new Class[] { Target3.class });
         Class c = f.createClass();
-        Target3 obj = (Target3)c.newInstance();
+        Target3 obj = (Target3)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor2);
         assertEquals("OK", obj.m());
         System.out.println(obj.toString());
         assertEquals(3, interceptor2.counter);
@@ -182,17 +189,19 @@ public class ProxyTester extends TestCase {
     public void test2Interfaces() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor2 interceptor2 = new Interceptor2();
-        f.setHandler(interceptor2);
+        // f.setHandler(interceptor2);
         f.setFilter(finalizeRemover);
         f.setInterfaces(new Class[] { Target3.class, Target4.class });
         Class c = f.createClass();
-        Target3 obj = (Target3)c.newInstance();
+        Target3 obj = (Target3)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor2);
         assertEquals("OK", obj.m());
         System.out.println(obj.toString());
         assertEquals(3, interceptor2.counter);
 
         interceptor2.counter = 0;
-        Target4 obj4 = (Target4)c.newInstance();
+        Target4 obj4 = (Target4)c.getConstructor().newInstance();
+        ((Proxy)obj4).setHandler(interceptor2);
         assertEquals(3, obj4.bar4());
         assertEquals(3, obj4.foo4());
         assertEquals(2, interceptor2.counter);
@@ -201,7 +210,7 @@ public class ProxyTester extends TestCase {
     public void testFilter() throws Exception {
         ProxyFactory f = new ProxyFactory();
         Interceptor2 interceptor2 = new Interceptor2();
-        f.setHandler(interceptor2);
+        // f.setHandler(interceptor2);
         f.setFilter(finalizeRemover);
         f.setInterfaces(new Class[] { Target3.class });
         f.setFilter(new MethodFilter() {
@@ -210,7 +219,8 @@ public class ProxyTester extends TestCase {
                 }
             });
         Class c = f.createClass();
-        Target3 obj = (Target3)c.newInstance();
+        Target3 obj = (Target3)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor2);
         assertEquals("OK", obj.m());
         System.out.println(obj.toString());
         assertEquals(1, interceptor2.counter);
@@ -232,7 +242,7 @@ public class ProxyTester extends TestCase {
         Class c = f.createClass();
         assertTrue(testInitFlag); // since 3.12.  Before then, this line was assertFalse(testInitFlag);
         System.out.println("testInit createClass(): " + testInitFlag);
-        TargetInit obj = (TargetInit)c.newInstance();
+        TargetInit obj = (TargetInit)c.getConstructor().newInstance();
         assertTrue(testInitFlag);
         System.out.println("testInit newInstance(): " + testInitFlag);
         ((ProxyObject)obj).setHandler(handler);
@@ -243,10 +253,11 @@ public class ProxyTester extends TestCase {
         ProxyFactory f = new ProxyFactory();
         f.setSuperclass(Target5.class);
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         Class c = f.createClass();
-        Target5 obj = (Target5)f.create(new Class[] { int.class }, new Object[] { new Integer(3) });
+        Target5 obj = (Target5)f.create(new Class[] { int.class }, new Object[] { Integer.valueOf(3) });
+        ((Proxy)obj).setHandler(interceptor);
         assertEquals(3, obj.get());
     }
 
@@ -256,10 +267,11 @@ public class ProxyTester extends TestCase {
         f.writeDirectory = ".";
         f.setSuperclass(BridgeMethod.class);
         Interceptor1 interceptor = new Interceptor1();
-        f.setHandler(interceptor);
+        // f.setHandler(interceptor);
         f.setFilter(finalizeRemover);
         Class c = f.createClass();
-        BridgeMethod obj = (BridgeMethod)c.newInstance();
+        BridgeMethod obj = (BridgeMethod)c.getConstructor().newInstance();
+        ((Proxy)obj).setHandler(interceptor);
         Integer value = obj.m1();
         assertEquals(7, value.intValue());
         BridgeMethodInf inf = (BridgeMethodInf)obj;
@@ -298,19 +310,24 @@ public class ProxyTester extends TestCase {
 
     public void testProvider() throws Exception {
         ProxyFactory.ClassLoaderProvider cp = ProxyFactory.classLoaderProvider;
-        final ClassLoader cl = Thread.currentThread().getContextClassLoader();
-        ProxyFactory.classLoaderProvider = new ProxyFactory.ClassLoaderProvider() {
-            public ClassLoader get(ProxyFactory pf) {
-                return Thread.currentThread().getContextClassLoader();
-            }
-        };
+        try {
+            final ClassLoader cl = Thread.currentThread().getContextClassLoader();
+            ProxyFactory.classLoaderProvider = new ProxyFactory.ClassLoaderProvider() {
+                public ClassLoader get(ProxyFactory pf) {
+                    return Thread.currentThread().getContextClassLoader();
+                }
+            };
 
-        ProxyFactory2 pf = new ProxyFactory2();
-        assertEquals(cl, pf.getClassLoader2());
-        ProxyFactory.classLoaderProvider = cp;
+            ProxyFactory2 pf = new ProxyFactory2();
+            assertEquals(cl, pf.getClassLoader2());
+        }
+        finally {
+            ProxyFactory.classLoaderProvider = cp;
+        }
     }
 
-    public void testCache() throws Exception {
+    @SuppressWarnings("deprecation")
+	public void testCache() throws Exception {
         boolean prev = ProxyFactory.useCache;
         ProxyFactory.useCache = true;
         ProxyFactory f = new ProxyFactory();
@@ -321,8 +338,9 @@ public class ProxyTester extends TestCase {
         assertEquals(c, f2.createClass());
         ProxyFactory f3 = new ProxyFactory();
         f3.setSuperclass(Cache1.class);
-        f3.setHandler(new Interceptor1());
+        f3.setHandler(new Interceptor1());	// deprecated
         assertFalse(c == f3.createClass());
+        ProxyFactory.useCache = true;
         ProxyFactory f4 = new ProxyFactory();
         f4.setSuperclass(Cache1.class);
         f4.setInterfaces(new Class[] { Cache2.class });
@@ -349,19 +367,28 @@ public class ProxyTester extends TestCase {
     public void testReadWrite() throws Exception {
         final String fileName = "read-write.bin";
         ProxyFactory.ClassLoaderProvider cp = ProxyFactory.classLoaderProvider;
-        ProxyFactory.classLoaderProvider = new ProxyFactory.ClassLoaderProvider() {
-            public ClassLoader get(ProxyFactory pf) {
-                return new javassist.Loader();
-            }
-        };
-        ProxyFactory pf = new ProxyFactory();
-        pf.setSuperclass(ReadWriteData.class);
-        Object data = pf.createClass().newInstance();
-        // Object data = new ReadWriteData();
-        ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(fileName));
-        oos.writeObject(data);
-        oos.close();
-        ProxyFactory.classLoaderProvider = cp;
+        try {
+            ProxyFactory.classLoaderProvider = new ProxyFactory.ClassLoaderProvider() {
+                public ClassLoader get(ProxyFactory pf) {
+                    /* If javassist.Loader is returned, the super type of ReadWriteData class,
+                     * which is Serializable, is loaded by javassist.Loader as well as ReadWriteData.
+                     * This breaks the implementation of the object serializer.
+                     */
+                    // return new javassist.Loader();
+                    return Thread.currentThread().getContextClassLoader();
+                }
+            };
+            ProxyFactory pf = new ProxyFactory();
+            pf.setSuperclass(ReadWriteData.class);
+            Object data = pf.createClass().getConstructor().newInstance();
+            //Object data = new ReadWriteData();
+            ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(fileName));
+            oos.writeObject(data);
+            oos.close();
+        }
+        finally {
+            ProxyFactory.classLoaderProvider = cp;
+        }
 
         ObjectInputStream ois = new ObjectInputStream(new FileInputStream(fileName));
         Object data2 = ois.readObject();
@@ -377,12 +404,12 @@ public class ProxyTester extends TestCase {
     public void testWriteReplace() throws Exception {
         ProxyFactory pf = new ProxyFactory();
         pf.setSuperclass(WriteReplace.class);
-        Object data = pf.createClass().newInstance();
+        Object data = pf.createClass().getConstructor().newInstance();
         assertEquals(data, ((WriteReplace)data).writeReplace());
 
         ProxyFactory pf2 = new ProxyFactory();
         pf2.setSuperclass(WriteReplace2.class);
-        Object data2 = pf2.createClass().newInstance();
+        Object data2 = pf2.createClass().getConstructor().newInstance();
         Method meth = data2.getClass().getDeclaredMethod("writeReplace", new Class[0]);
         assertEquals("javassist.util.proxy.SerializedProxy",
                     meth.invoke(data2, new Object[0]).getClass().getName());
@@ -393,18 +420,21 @@ public class ProxyTester extends TestCase {
     }
 
     public static class WriteReplace2 implements Serializable {
-        public Object writeReplace(int i) { return new Integer(i); }
+        public Object writeReplace(int i) { return Integer.valueOf(i); }
     }
 
     public static void testJIRA189() throws Exception {
-    	Class persistentClass = Target189.PublishedArticle.class;
+        Class persistentClass = Target189.PublishedArticle.class;
         ProxyFactory factory = new ProxyFactory();
-        // factory.writeDirectory = ".";
+        //factory.writeDirectory = ".";
         factory.setUseCache(false);
         factory.setSuperclass(persistentClass);
         factory.setInterfaces(new Class[] { Target189.TestProxy.class });
         Class cl = factory.createClass();
-        Target189.TestProxy proxy = (Target189.TestProxy)cl.newInstance();
+        Object obj = cl.getConstructor().newInstance();
+        System.out.println("JIRA189:" + obj.getClass().getClassLoader() + ", " + obj.getClass().getSuperclass().getName()
+                            + ", " + Target189.PublishedArticle.class.getClassLoader());
+        Target189.TestProxy proxy = (Target189.TestProxy)cl.getConstructor().newInstance();
         Target189.TestMethodHandler methodHandler = new Target189.TestMethodHandler();
         ((ProxyObject)proxy).setHandler(methodHandler);
         ((Target189.Article)proxy).getIssue();
